--- a/ZPG/ZPG/ZPG.vcxproj.filters
+++ b/ZPG/ZPG/ZPG.vcxproj.filters
@@ -205,6 +205,9 @@
     <ClCompile Include="Sykbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="transformation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="phongForest.frag.txt">
